<resources>
    <string name="app_name">lesson7_system_test</string>
    <string name="add_test">Add test</string>
    <string name="title_activity_login">Tests</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>

    <string name="add_test_activity">Добавить тест</string>
    <string name="add_questions_activity">Добавить тест и вопросы</string>
    <string name="choose_test">Выбрать тест</string>

    <string name="_1">Ответ1</string>
    <string name="_2">Ответ2</string>
    <string name="_3">Ответ3</string>
    <string name="_4">Ответ4</string>
    <string name="question">Вопрос</string>
    <string name="add">добавить</string>
    <string name="save">save</string>
    <string name="name_test_xml">Имя теста</string>
    <string name="new_test">Новый тест</string>
    <string name="save_button">save</string>


</resources>
