<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sergey.lesson7_system_test.TestActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name_test_xml"
        android:ems="10"
        android:textSize="20dp"
        android:id="@+id/nameTest"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_below="@+id/nameTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/question"
        android:ems="10"
        android:id="@+id/question"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/image"
        android:id="@+id/imageView3"
        android:layout_alignTop="@+id/editText2"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/_1"
        android:ems="10"
        android:layout_below="@+id/question"
        android:layout_toEndOf="@+id/imageView3"
        android:layout_marginTop="58dp"
        android:id="@+id/editText2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/_2"
        android:ems="10"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:id="@+id/editText3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/_3"
        android:ems="10"
        android:layout_below="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:id="@+id/editText4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/_4"
        android:ems="10"
        android:layout_below="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:id="@+id/editText5" />




</RelativeLayout>
